--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -29,7 +29,7 @@ Licensed under GNU Affero General Public License. -->
       {{- with $displayThemeToggle }}{{ partial "theme-toggle.html" }}{{ end -}}
       <!-- Custom Copyrint text -->
       <div class="hx:h-7 hx:px-2 hx:text-xs hx:font-medium hx:text-gray-600 hx:transition-colors hx:dark:text-gray-400 hx:hover:text-gray-900 hx:dark:hover:text-gray-50 hx:justify-center hx:flex hx:items-center">
-        <a href="https://eonyx.github.io/about/" style="text-decoration: none;"><span class="copyright_by_text">© 2025 By Akrit Behera</span></a>
+        <a href="https://blitzio.pages.dev/about/" style="text-decoration: none;"><span class="copyright_by_text">© 2025 By Akrit Behera</span></a>
       </div>
       <!-- end -->
     </div>
